--- a/Application/Admin/View/car/news.html
+++ b/Application/Admin/View/car/news.html
@@ -81,7 +81,7 @@
 				<td>{$p.time}</td>
 				<td>{$p.valid}</td>
 				<td><a href='__CONTROLLER__/change?id={$p.id}'>修改</a></td>
-				<td><a href='__CONTROLLER__/news_traffic?id={$p.id}'>新闻预览</a></td>
+				<td><a href='__CONTROLLER__/news_traffic?id={$p.id}' target="_Blank">新闻预览</a></td>
 				<!--  <td><a href='__MODULE__/Wei/weixin_xinwen?id={$p.id}'>微信推送</a></td>	-->
 			</tr>	
 	</volist>	 
