--- a/Application/Admin/View/car/news_traffic.html
+++ b/Application/Admin/View/car/news_traffic.html
@@ -113,7 +113,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="single-left-grid">
 							<h1 style="text-align: center">{$one_news.title}</h1>
 							<p style="text-align: center">时间：{$one_news.time}  来源：中国交通新闻网  作者：记者 xxx 通讯员 xx</p>
-							<img src="__ROOT__/html/newshtml/images/1.jpg" alt="" class="img-responsive" style="margin:0 auto"/>
+							<p style="display:none" id='url_img'>{$one_news.url}</p>
+							<img id="big_img"  class="img-responsive" style="margin:0 auto;width:726px;height:426px;"/>
 							<!--<h4>上海一路口成长途汽车站点 “黄牛”在路边拉客</h4>-->
 							<p class="text" style="font-size: 16px">{$one_news.content}</p>
 							<div class="single-bottom">
@@ -139,71 +140,75 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						  </ul>
 					  </div>
 						<div class="modern">
-						  <h4 class="side"><i class="glyphicon glyphicon-user" aria-hidden="true"></i> 主要信息</h4>
+						<h4 class="side"><i class="glyphicon glyphicon-user" aria-hidden="true"></i> 主要信息</h4>
 						  <div id="example1">
 							<div id="owl-demo" class="owl-carousel text-center">
-							  	<div class="item">
+							  <div class="item">
 						
 								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/famous.jpg" alt=""/>
-							 	</div>
-							 	<div class="item">
+							 </div>
+							 <div class="item">
 						
 								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p2.jpg" alt=""/>
-								</div>
-								<div class="item">
-							
-									<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p33.jpg" alt=""/>
-								</div>
-								<div class="item">
-							
-									<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p1.jpg" alt=""/>
 							</div>
-								<div class="item">
-							
-									<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p1.jpg" alt=""/>
-								</div>
-								<div class="item">
-							
-									<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p2.jpg" alt=""/>
+							<div class="item">
+						
+								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p33.jpg" alt=""/>
 							</div>
-								<div class="item">
-							
-									<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p33.jpg" alt=""/>
-							</div>
-								<div class="item">
+							<div class="item">
 						
 								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p1.jpg" alt=""/>
 						</div>
-							</div>
+						<div class="item">
+						
+								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p1.jpg" alt=""/>
 						</div>
+							<div class="item">
+						
+								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p2.jpg" alt=""/>
+						</div>
+							<div class="item">
+						
+								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p33.jpg" alt=""/>
+						</div>
+							<div class="item">
+						
+								<img class="img-responsive lot" src="__ROOT__/html/newshtml/images/p1.jpg" alt=""/>
+						</div>
+					</div>
+					</div>
 					<!-- requried-jsfiles-for owl -->
-											<script src="__ROOT__/html/newshtml/js/owl.carousel.js"></script>
-											  <script>
-											  $(document).ready(function() {
-												   $("#owl-demo").owlCarousel({
-													items :1,
-													lazyLoad : true,
-													autoPlay : false,
-													navigation : true,
-													navigationText :  true,
-													pagination : false,
-													responsiveBreakpoints: { 
-											portrait: { 
-												changePoint:480,
-												visibleItems: 2
-											}, 
-											landscape: { 
-												changePoint:640,
-												visibleItems: 2
-											},
-											tablet: { 
-												changePoint:768,
-												visibleItems: 3
-											}
-										}
-													});
-											  });
-											</script>
+<script src="__ROOT__/html/newshtml/js/owl.carousel.js"></script>
+						  <script>
+						  $(function(){
+								var url=$('#url_img').text()
+							  	$('#big_img').attr('src',url)
+						  })
+						  $(document).ready(function() {
+							   $("#owl-demo").owlCarousel({
+								items :1,
+								lazyLoad : true,
+								autoPlay : false,
+								navigation : true,
+								navigationText :  true,
+								pagination : false,
+								responsiveBreakpoints: { 
+						portrait: { 
+							changePoint:480,
+							visibleItems: 2
+						}, 
+						landscape: { 
+							changePoint:640,
+							visibleItems: 2
+						},
+						tablet: { 
+							changePoint:768,
+							visibleItems: 3
+						}
+					}
+								});
+						  });
+						</script>
 							<!-- //requried-jsfiles-for owl -->
 							</div>
 								 <h4 class="side"><i class="glyphicon glyphicon-file" aria-hidden="true"></i>专家顾问</h4>
