--- a/Application/Admin/View/car/add_criminal.html
+++ b/Application/Admin/View/car/add_criminal.html
@@ -68,11 +68,11 @@ function preview(file){
     </tr>
     <tr>
         <td class="tableleft">驾驶证号</td>
-        <td><input type="text" name="action" style="height:20px; width: 300px"/></td>
+        <td><input type="text" name="driver_car" style="height:20px; width: 300px"/></td>
     </tr>
     <tr>
         <td class="tableleft">车牌号</td>
-        <td><input type="text" name="action" style="height:20px; width: 300px"/></td>
+        <td><input type="text" name="car_id" style="height:20px; width: 300px"/></td>
     </tr>
     <tr>
         <td class="tableleft">状态</td>
