--- a/Application/Admin/View/car/car.html
+++ b/Application/Admin/View/car/car.html
@@ -57,7 +57,7 @@
      	<option><font color="#777777"><strong>颜色</strong></font></option>
      </select>  
     <input type="text" name="menuname" id="menuname"class="abc input-default" placeholder="" value="">&nbsp;&nbsp; 
-    <button type="submit" class="btn btn-primary">查询</button> 
+    <button type="submit" class="btn btn-primary" style="width:100px">查询</button> 
 </form>
 <table class="table table-bordered table-hover definewidth m10">
     <thead>
