--- a/Application/Admin/View/index/case_appeal.html
+++ b/Application/Admin/View/index/case_appeal.html
@@ -103,23 +103,23 @@
     </volist>
     <volist name="evidence" id="vo2" key="j">
         <if condition="$vo2.type eq 'jpg'">
-            <if condition="$vo2.state eq 'normal'"><th>现场照片</th>
-                <elseif condition="$vo2.state eq 'change'" /><p style="color: red" class="evidence">现场照片修改前</p><input type="hidden" name="change[]" value="{$vo2.id}" />
-                <elseif condition="$vo2.state eq 'new'" /><p style="color: green" class="evidence">现场照片修改后</p><input type="hidden" name="new[]" value="{$vo2.id}" />
+            <if condition="$vo2.state eq 'normal'"><tr>现场照片</tr>
+                <elseif condition="$vo2.state eq 'change'" /><tr style="color: red" class="evidence"><td>现场照片修改前</td></tr><input type="hidden" name="change[]" value="{$vo2.id}" />
+                <elseif condition="$vo2.state eq 'new'" /><tr style="color: green" class="evidence"><td>现场照片修改后</td></tr><input type="hidden" name="new[]" value="{$vo2.id}" />
             </if>
-            <img src="/project_4/{$vo2.url}" style="width: 400px"><br/>
+            <tr><td><img src="/project_4/{$vo2.url}" style="width: 400px"></td></tr>
         <elseif condition="$vo2.type eq 'mp3'" />
-            <if condition="$vo2.state eq 'normal'"><p>现场录音</p>
-            <elseif condition="$vo2.state eq 'change'" /><p style="color: red" class="evidence">现场录音修改前</p><input type="hidden" name="change[]" value="{$vo2.id}" />
-            <elseif condition="$vo2.state eq 'new'" /><p style="color: green" class="evidence">现场录音修改后</p><input type="hidden" name="new[]" value="{$vo2.id}" />
+            <if condition="$vo2.state eq 'normal'"><tr><td>现场录音</td></tr>
+            <elseif condition="$vo2.state eq 'change'" /><tr style="color: red" class="evidence"><td>现场录音修改前</td></tr><input type="hidden" name="change[]" value="{$vo2.id}" />
+            <elseif condition="$vo2.state eq 'new'" /><tr style="color: green" class="evidence"><td>现场录音修改后</td></tr><input type="hidden" name="new[]" value="{$vo2.id}" />
             </if>
-            <audio src="/project_4/{$vo2.url}" controls="controls"></audio><br/>
+            <tr><td><audio src="/project_4/{$vo2.url}" controls="controls"></audio></td></tr>
         <elseif condition="$vo2.type eq 'mp4'" />
-            <if condition="$vo2.state eq 'normal'"><p>现场视频</p>
-                <elseif condition="$vo2.state eq 'change'" /><p style="color: red" class="evidence">现场视频修改前</p><input type="hidden" name="change[]" value="{$vo2.id}" />
-                <elseif condition="$vo2.state eq 'new'" /><p style="color: green" class="evidence">现场视频修改后</p><input type="hidden" name="new[]" value="{$vo2.id}" />
+            <if condition="$vo2.state eq 'normal'"><tr><td>现场视频</td></tr>
+                <elseif condition="$vo2.state eq 'change'" /><tr style="color: red" class="evidence"><td>现场视频修改前</td></tr><input type="hidden" name="change[]" value="{$vo2.id}" />
+                <elseif condition="$vo2.state eq 'new'" /><tr style="color: green" class="evidence"><td>现场视频修改后</td></tr><input type="hidden" name="new[]" value="{$vo2.id}" />
             </if>
-            <video src="/project_4/{$vo2.url}" controls="controls" style="width: 400px"></video><br/>
+            <tr><td><video src="/project_4/{$vo2.url}" controls="controls" style="width: 400px"></video></td></tr>
         </if>
     </volist>
 
