--- a/Application/Admin/View/index/case.html
+++ b/Application/Admin/View/index/case.html
@@ -57,8 +57,9 @@
                 <td>{$vo.happentime}</td>
                 <td>{$vo.state}</td>
                 <td><a href="__CONTROLLER__/case_detail?id={$vo.id}">案件详情</a></td>
-                <if condition="$vo.state eq '审核'"><td><a href="__CONTROLLER__/case_pass?id={$vo.id}">通过</a></td>
-                <else/><td>已审核</td>
+                <if condition="$vo.state eq '审核'"><td><a href="__CONTROLLER__/case_pass?id={$vo.id}&state=pass">通过</a> <a href="__CONTROLLER__/case_pass?id={$vo.id}&state=refused">驳回</a></td>
+                <elseif condition="$vo.state eq '修正'" /><td>等待处理</td>
+                    <else/><td>已审核</td>
                 </if>
             </tr>
         </volist>
