--- a/Application/Admin/View/car/criminal.html
+++ b/Application/Admin/View/car/criminal.html
@@ -71,12 +71,12 @@ body {font-size: 20px;
 <body>
 <h1 style="text-align:center">通缉犯信息</h1>
 <form class="form-inline definewidth m20" action="__CONTROLLER__/criminal_search" method="get">
-     <select  name='select'>
+     <select  name='select' style="width:80px;height:30px">
      	<option><font color="#777777"><strong>姓名</strong></font></option>
      	<option><font color="#777777"><strong>罪状</strong></font></option>
    	   	<option><font color="#777777"><strong>状态</strong></font></option>     	
      </select>  
-    <input type="text" name="search" id="menuname"class="abc input-default" placeholder="" value="">&nbsp;&nbsp; 
+    <input type="text" name="search" id="menuname"class="abc input-default" placeholder="" value="" style="width:200px;height:30px">&nbsp;&nbsp; 
     <button type="submit" class="btn btn-primary"style="width:100px">查询</button> 
     <a href='__CONTROLLER__/add_criminal'><button type="button" class="btn btn-primary" id='add_button'style="width:100px">添加</button></a>
 </form>
