--- a/Application/Admin/View/index/welcome.html
+++ b/Application/Admin/View/index/welcome.html
@@ -54,12 +54,13 @@ float:left;
 
 .top2 {
 	position: absolute;
-	top: 20px;
+	top: 0px;
 	width: 100%;
 	height: 83px;
 	text-align: center;
 	color: #ccffff;
-	background-color: #888888
+	background-color: #888888;
+	padding: 20px;
 }
 
 .left {
@@ -72,7 +73,8 @@ float:left;
 	color: #000000;
 	font-size: 20px;
 	text-align: center;
-	background-color: #B3B3B3
+	background:no-repeat url("__PUBLIC__/admin/images/bc2.jpg");
+	background-size: 100% 100%;
 }
 
 .right {
@@ -147,10 +149,7 @@ float:left;
 </style>
 </head>
 <body>
-	<div class="top1">
-		<marquee scrollAmount=2 width=300>数据无价，请谨慎操作！</marquee>
-	</div>
-	<div class="top2">
+	<div class="top2" style="background-image: url('__PUBLIC__/admin/images/bc1.jpg')">
 		<div class="logo">
 			<img src="__PUBLIC__/Admin/images/jinghui.png" title="警徽" />
 		</div>
