--- a/Application/Admin/View/index/welcome.html
+++ b/Application/Admin/View/index/welcome.html
@@ -56,7 +56,7 @@ float:left;
 	position: absolute;
 	top: 0px;
 	width: 100%;
-	height: 83px;
+	height: 63px;
 	text-align: center;
 	color: #ccffff;
 	background-color: #888888;
@@ -73,8 +73,7 @@ float:left;
 	color: #000000;
 	font-size: 20px;
 	text-align: center;
-	background:no-repeat url("__PUBLIC__/admin/images/bc2.jpg");
-	background-size: 100% 100%;
+	background-color: #82a1c9;
 }
 
 .right {
