--- a/Application/Admin/View/car/add_criminal.html
+++ b/Application/Admin/View/car/add_criminal.html
@@ -68,7 +68,7 @@ function preview(file){
     </tr>
     <tr>
         <td class="tableleft">驾驶证号</td>
-        <td><input type="text" name="drive_car" style="height:20px; width: 300px"/></td>
+        <td><input type="text" name="drive_card" style="height:20px; width: 300px"/></td>
     </tr>
     <tr>
         <td class="tableleft">车牌号</td>
