--- a/Application/Admin/View/car/criminal.html
+++ b/Application/Admin/View/car/criminal.html
@@ -97,7 +97,7 @@ body {font-size: 20px;
 			<tr>
 				<td style="width:60px">{$p.id}</td>
 				<td style="width:100px">{$p.name|substr=0,27}</td>
-				<td >{$p.driver_car}</td>
+				<td >{$p.drive_card}</td>
 				<td >{$p.car_id}</td>
 				<td style="width:300px">{$p.action|substr=0,57}</td>
 				<td class='{$p.state}'>{$p.state}</td>
