--- a/Application/Admin/View/car/change.html
+++ b/Application/Admin/View/car/change.html
@@ -53,7 +53,7 @@ function preview(file){
 <body>
 <h1 style="text-align:center">新闻修改</h1>
 <div class="change">
-<form action="changeAction?id={$one_news.id}" method="post" class="definewidth m20"  id="Form">
+<form action="changeAction?id={$one_news.id}" method="post" class="definewidth m20"  id="Form" enctype="multipart/form-data">
 <table style="margin-left:10px;margin-top:3px;">
     <tr>
          <td>标题：</td>
