--- a/Application/Admin/View/index/police.html
+++ b/Application/Admin/View/index/police.html
@@ -38,35 +38,40 @@
     <button type="submit" class="btn btn-primary">查询{$user.power}</button>&nbsp;&nbsp;
 	<if condition="$power eq 'super'"><button type="button"  id="addnew"><a href="__CONTROLLER__/policeadd">添加警员</a></button></if>
 </form>
-<table class="table table-bordered table-hover definewidth m10">
-    <thead>
-    <tr>
-        <th>警员编号</th>
-        <th>警员姓名</th>
-        <th>警员性别</th>
-        <th>警员年龄</th>
-        <th>警员片区</th>
-        <th>警员职位</th>
-        <th>硬件号</th>
-        <th>警员状态</th>
-    </tr>
-    </thead>
-        <volist name="police" id="vo">
-            <tr>
-                <td>{$vo.id}</td>
-                <td>{$vo.name}</td>
-                <td>{$vo.sex}</td>
-                <td>{$vo.age}</td>
-                <td>{$vo.area}</td>
-                <td>{$vo.job}</td>
-                <td>{$vo.imei}</td>
-                <if condition="$vo.state eq 'normal'"><td>在职</td>
-                <elseif condition="$vo.state eq 'quit'"/><td>离职</td>
-                </if>
-            </tr>
-        </volist>
-</table>
-{$page}
+
+<if condition="$empty eq 0">
+    <p style="text-align: center;margin-top: 30px" >没有符合条件的结果</p>
+<else/>
+    <table class="table table-bordered table-hover definewidth m10">
+        <thead>
+        <tr>
+            <th>警员编号</th>
+            <th>警员姓名</th>
+            <th>警员性别</th>
+            <th>警员年龄</th>
+            <th>警员片区</th>
+            <th>警员职位</th>
+            <th>硬件号</th>
+            <th>警员状态</th>
+        </tr>
+        </thead>
+            <volist name="police" id="vo">
+                <tr>
+                    <td>{$vo.id}</td>
+                    <td>{$vo.name}</td>
+                    <td>{$vo.sex}</td>
+                    <td>{$vo.age}</td>
+                    <td>{$vo.area}</td>
+                    <td>{$vo.job}</td>
+                    <td>{$vo.imei}</td>
+                    <if condition="$vo.state eq 'normal'"><td>在职</td>
+                    <elseif condition="$vo.state eq 'quit'"/><td>离职</td>
+                    </if>
+                </tr>
+            </volist>
+    </table>
+    {$page}
+</if>
 </body>
 </html>
 <script>
