--- a/Application/Admin/View/index/user.html
+++ b/Application/Admin/View/index/user.html
@@ -36,31 +36,35 @@
     <input type="text" name="search" id="menuname" class="abc input-default" placeholder="输入要查询的用户信息" value="{$search}">&nbsp;&nbsp;
     <button type="submit" class="btn btn-primary">查询</button>&nbsp;&nbsp;
 </form>
-<table class="table table-bordered table-hover definewidth m10">
-    <thead>
-    <tr>
-        <th>用户id</th>
-        <th>用户姓名</th>
-        <th>用户身份证号</th>
-        <th>驾照编码</th>
-        <th>剩余分数</th>
-        <th>注册时间</th>
-        <th>用户电话</th>
-    </tr>
-    </thead>
-        <volist name="police" id="vo">
-            <tr>
-                <td>{$vo.id}</td>
-                <td>{$vo.name}</td>
-                <td>{$vo.idcard}</td>
-                <td>{$vo.drive_card}</td>
-                <td>{$vo.score}</td>
-                <td>{$vo.regtime}</td>
-                <td>{$vo.phone}</td>
-            </tr>
-        </volist>
-</table>
-{$page}
+<if condition="$empty eq 0">
+    <p style="text-align: center;margin-top: 30px" >没有符合条件的结果</p>
+<else/>
+    <table class="table table-bordered table-hover definewidth m10">
+        <thead>
+        <tr>
+            <th>用户id</th>
+            <th>用户姓名</th>
+            <th>用户身份证号</th>
+            <th>驾照编码</th>
+            <th>剩余分数</th>
+            <th>注册时间</th>
+            <th>用户电话</th>
+        </tr>
+        </thead>
+            <volist name="police" id="vo">
+                <tr>
+                    <td>{$vo.id}</td>
+                    <td>{$vo.name}</td>
+                    <td>{$vo.idcard}</td>
+                    <td>{$vo.drive_card}</td>
+                    <td>{$vo.score}</td>
+                    <td>{$vo.regtime}</td>
+                    <td>{$vo.phone}</td>
+                </tr>
+            </volist>
+    </table>
+    {$page}
+</if>
 </body>
 </html>
 <script>
