--- a/Application/Admin/View/car/add_news.html
+++ b/Application/Admin/View/car/add_news.html
@@ -64,7 +64,7 @@
     </tr>
     <tr>
         <td class="tableleft">内容</td>
-        <td><textarea type="text" name="content" style="height: 93px; width: 400px"></textarea></td>
+        <td><textarea type="text" name="content" style="height: 100px; width: 400px"></textarea></td>
     </tr> 
     <tr>
         <td class="tableleft">发布时间</td>
@@ -98,7 +98,8 @@
     <tr>
         <td class="tableleft"></td>
         <td>
-            <a href='#'><button style="margin-left:180px;"type="submit" class="btn btn-primary" id='add_button'></a>添加</button>&nbsp;&nbsp;<button type="button" ><a href="news.html">返回列表</a></button>
+            <a href='#'><button style="margin-left:180px;"type="submit" class="btn btn-primary" id='add_button'></a>添加</button>&nbsp;&nbsp;
+            <button type="button" ><a href="news.html">返回列表</a></button>
         </td>
     </tr>
 </table>
